--- a/frontend/src/main/frontend/src/app/workspace/property/property.component.html
+++ b/frontend/src/main/frontend/src/app/workspace/property/property.component.html
@@ -6,18 +6,18 @@
 		</div>
 		<div class="graphic mb-3">
 			<div class="d-flex">
-        <!--
-        <span class="item icon" [disablePopover]="!canPopover" placement="bottom"
-            [ngbPopover]="iconsContent" [popoverTitle]="iconsTitle" [autoClose]="'outside'" container="body">
-          <i *ngIf="currIcon" [ngClass]="['fas', 'fa-'+currIcon.name]" aria-hidden="true"></i>
-        </span>
-        -->
-        <span class="item color" [style.background-color]="currColor" [disablePopover]="!canPopover" placement="bottom"
+        <!-- 캔버스 모드 & 노드 에서만 팔레트 popOver 가 보여진다 -->
+        <span *ngIf="!isEdge" class="item color" [style.background-color]="currColor" [disablePopover]="!canPopover" placement="bottom"
           [ngbPopover]="paletteContent" [popoverTitle]="paletteTitle" [autoClose]="'outside'" container="body">
         </span>
-        <span *ngIf="isEdge" class="item color" [style.background-color]="currColor2" [disablePopover]="!canPopover" placement="bottom"
-          [ngbPopover]="paletteContent" [popoverTitle]="paletteTitle" [autoClose]="'outside'" container="body">
+        <!-- edge 인 경우에만 보이는 칼라 아이템: 마우스 오버시에 노드 라벨 출력 -->
+        <span *ngIf="isEdge" class="item color" [style.background-color]="currColor1" placement="bottom"
+          [ngbPopover]="popContent1" [popoverTitle]="popTitle1" [triggers]="'mouseenter:mouseleave'" [autoClose]="'outside'" container="body">
         </span>
+        <span *ngIf="isEdge" class="item color" [style.background-color]="currColor2" placement="bottom"
+          [ngbPopover]="popContent2" [popoverTitle]="popTitle2" [triggers]="'mouseenter:mouseleave'" [autoClose]="'outside'" container="body">
+        </span>
+        <!-- 클릭된 대상의 라벨명: 항상 보인다 -->
         <span class="label type px-2">{{data.label}}</span>
       </div>
     </div>
@@ -33,12 +33,14 @@
     <ngb-tabset>
       <ngb-tab title="Properties">
         <ng-template ngbTabContent>
+          <div style="height:800px">
           <ul class="property-list list-group">
             <li *ngFor="let item of data.properties | keyvalue" class="list-group-item px-1 py-2 border-0">
               <em>{{item.key}}</em>
               <p class="property-detail">{{item.value}}</p>
             </li>
           </ul>
+          </div>
         </ng-template>
       </ngb-tab>
       <ngb-tab title="Graph features">
@@ -50,7 +52,7 @@
             </li>
           </ul>
         </ng-template>
-      </ngb-tab> 
+      </ngb-tab>
     </ngb-tabset>
   </div>
 	<div class="panel_action bg-white">
@@ -100,6 +102,11 @@
   <!-- </div> -->
 </ng-template>
 
+<!-- edge의 nodes' label popOver -->
+<ng-template #popTitle1>source label</ng-template>
+<ng-template #popContent1><b>{{source_label}}</b></ng-template>
+<ng-template #popTitle2>target label</ng-template>
+<ng-template #popContent2><b>{{target_label}}</b></ng-template>
 
 <!-- 필터 및 디자인 popover 소스코드 -->
 <ng-template #iconsTitle>Icons</ng-template>
