front: add search box for ds

--- a/frontend/src/main/frontend/src/app/workspace/header/header.component.css
+++ b/frontend/src/main/frontend/src/app/workspace/header/header.component.css
@@ -4,7 +4,7 @@
   max-height: 75vh;
   border: 1px solid #ccc;
 }
-.typeahead-wrap .list-group-item {    
+.typeahead-wrap .list-group-item {
   width:100%;
   text-align: left;
   position: relative;
@@ -25,4 +25,20 @@
 
 .typeahead-wrap .list-group-item .item-name {
   font-weight: bold;
+}
+
+.has-search .form-control {
+  padding-left: 2.375rem;
+}
+
+.has-search .form-control-feedback {
+  position: absolute;
+  z-index: 2;
+  display: block;
+  width: 2.375rem;
+  height: 2.375rem;
+  line-height: 2.375rem;
+  text-align: center;
+  pointer-events: none;
+  color: #aaa;
 }
