--- a/frontend/src/main/frontend/src/app/workspace/header/header.component.html
+++ b/frontend/src/main/frontend/src/app/workspace/header/header.component.html
@@ -136,23 +136,29 @@
 		</button>
 	</div>
 	<div class="modal-body">
-			<table class="table table-striped">
-				<thead>	<tr>
-					<th scope="col">#</th>
-					<th scope="col">datasource</th>
-					<th scope="col">desc</th>
-				</tr> </thead>
-				<tbody>
-				<tr *ngFor="let ds of datasources; index as i">
-					<th scope="row">{{ i + 1 }}</th>
-					<td>
-						<!-- <img [src]="'https://upload.wikimedia.org/wikipedia/commons/' + country.flag" class="mr-2" style="width: 20px"> -->
-						<a href="javascript:void(0)" class="breadcrumb-item text-dark" (click)="modal.close(ds.name)">{{ ds.name }}</a>
-					</td>
-					<td>{{ ds.desc }}</td>
-				</tr>
-				</tbody>
-			</table>
+		<!-- search box for datasources -->
+		<div class="form-group has-search">
+			<span class="fa fa-search form-control-feedback"></span>
+			<input #searchDs type="text" class="form-control" placeholder="Search" (keyup.enter)="searchDatasources(searchDs.value)" />
+		</div>
+
+		<table class="table table-striped">
+			<thead>	<tr>
+				<th scope="col">#</th>
+				<th scope="col">datasource</th>
+				<th scope="col">desc</th>
+			</tr> </thead>
+			<tbody>
+			<tr *ngFor="let ds of datasources; index as i">
+				<th scope="row">{{ i + 1 }}</th>
+				<td>
+					<!-- <img [src]="'https://upload.wikimedia.org/wikipedia/commons/' + country.flag" class="mr-2" style="width: 20px"> -->
+					<a href="javascript:void(0)" class="breadcrumb-item text-dark" (click)="modal.close(ds.name)">{{ ds.name }}</a>
+				</td>
+				<td>{{ ds.desc }}</td>
+			</tr>
+			</tbody>
+		</table>
 	</div>
 	<!--
 	<div class="modal-footer">
@@ -178,7 +184,7 @@
               <button ngbDropdownItem *ngFor="let ds of datasources" (click)="setQuery('datasource',ds.name)">{{ds.desc}}</button>
             </div>
           </div>
-        </div>        
+        </div>
         <div class="col-sm-10">
           <input type="text" readonly class="form-control-plaintext font-weight-bold" id="queryDatasource" [value]="query.datasource">
         </div>
