--- a/frontend/src/main/frontend/src/app/workspace/header/header.component.html
+++ b/frontend/src/main/frontend/src/app/workspace/header/header.component.html
@@ -153,7 +153,7 @@
 				<th scope="row">{{ i + 1 }}</th>
 				<td>
 					<!-- <img [src]="'https://upload.wikimedia.org/wikipedia/commons/' + country.flag" class="mr-2" style="width: 20px"> -->
-					<a href="javascript:void(0)" class="breadcrumb-item text-dark" (click)="modal.close(ds.name)">{{ ds.name }}</a>
+					<a href="javascript:void(0)" class="breadcrumb-item text-primary" (click)="modal.close(ds.name)">{{ ds.name }}</a>
 				</td>
 				<td>{{ ds.desc }}</td>
 			</tr>
