test with datasource newskg

--- a/frontend/src/main/frontend/src/app/workspace/canvas/canvas.component.html
+++ b/frontend/src/main/frontend/src/app/workspace/canvas/canvas.component.html
@@ -66,6 +66,9 @@
     <ng-template contextMenuItem (execute)="ctxMenuActions.toggleCaption($event.item,'name')">
       <small>name</small>
     </ng-template>
+    <ng-template contextMenuItem (execute)="ctxMenuActions.toggleCaption($event.item,'name,label')">
+      <small>name &amp; label </small>
+    </ng-template>
     <ng-template contextMenuItem [visible]="ctxMenuActions.notExistSelect" divider="true"></ng-template>
     <ng-template contextMenuItem (execute)="ctxMenuActions.toggleCaption($event.item,'hide')">
       <small>HIDE</small>
@@ -84,4 +87,3 @@
   </ng-template>
 </context-menu>
 
- 
